Using a different HTTP client.